Create main function

--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Timer</title>
 </head>
 <body>
-    <h1 id="time"></h1>
-    <input type="datetime-local" id="datetime" />
+    <main>
+        <header>
+            <h1>TimeFromSpecified</h1>
+        </header>
+        <section>
+            <p id="time"></p>
+            <input type="datetime-local" id="datetime" />
+        </section>
+    </main>
 </body>
 </html>
