--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <section>
             <p id="time"></p>
             <input type="datetime-local" id="datetime" />
+            <input type="number" id="sec" min="0" max="59" value="0" />秒
         </section>
     </main>
 </body>
