--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
             <h1>TimeFromSpecified</h1>
         </header>
         <section>
-            <p id="time"></p>
+            <p id="time" class="time"></p>
             <input type="datetime-local" id="datetime" />
             <input type="number" id="sec" min="0" max="59" value="0" />秒
+            <br/>
+            <p>メモ欄</p>
+            <textarea></textarea>
         </section>
     </main>
 </body>
